--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,3 +1,12 @@
 {
-  "test": "test"
+  "events": {
+    "item-2":{
+      "title" : "Assassination of Boris Nemtsov",
+      "date": "02/27/2015"
+    },
+    "item-1":{
+      "title" : "Putin came to power",
+      "date": "12/31/1999"
+    }
+  }
 }
