--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,3 +1,12 @@
 {
-  "test": "тест"
+  "events": {
+    "item-2":{
+      "title" : "Убийство Бориса Немцова",
+      "date": "27.02.2015"
+    },
+    "item-1":{
+      "title" : "Путин пришел к власти",
+      "date": "31.12.1999"
+    }
+  }
 }
